# crispy-happiness

./: README.md
solution/modernization/pathways/advanced/: README.md
solution/modernization/pathways/introductory/: README.md
solution/modernization/pathways/introductory/agent/sole-agent/: README.md  main.py
solution/modernization/pathways/introductory/core/: pyproject.toml
solution/modernization/pathways/introductory/docs/: Agent-Installation.adoc  CORE-Installation.adoc  Tool-Installations.adoc
solution/modernization/pathways/introductory/kickstartcrew-lm-studio/: Guided-Tour-to-a-CrewAI-Kickstart-Crew.adoc  README.md
solution/modernization/pathways/mastery/: README.md
solution/modernization/pathways/mastery/docs/py-package-mgmt/: python-tooling.adoc
