[project]
name = "corelibs"
version = "0.0.0"
description ="library for setting up and perform complex tasks and collection of helpers."
authors = [ {name = "Core Team International"} ]
readme = "README.md"

requires-python = ">=3.11, <3.13"

dependencies = [
    "bandit>=1.8.5",
    "case-converter>=1.2.0",
    "chardet>=5.2.0",
    "crewai>=0.130.0",
    "crewai-tools>=0.47.1",
    "docker>=7.1.0",
    "flake8>=7.3.0",
    "javalang>=0.13.0",
    "langfuse>=3.0.3",
    "ollama>=0.5.1",
    "openlit>=1.34.3",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sqlparse>=0.5.3",
]

[tool.hatch.build.targets.wheel]
packages = [ "core", "helpers" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

